# TrailGuard

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  scratch_test_login.py  start.ps1  start.sh
docs/: PRD.md  (+11 more)
services/api/: .env.example  add_column.py  alembic.ini  pyproject.toml  requirements.txt  test_account.py
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial_schema.py  e73325b8fd8b_add_missing_graph_metrics_columns.py
services/api/app/: main.py
services/api/app/core/: config.py  dependencies.py  security.py
services/api/app/db/: base.py  seed.py
services/api/app/detection/: anomaly_scorer.py  base_detector.py  counterparty_detector.py  cycle_detector.py  engine.py  layering_detector.py  mule_detector.py  structuring_detector.py  velocity_detector.py
services/api/app/graph/: builder.py  service.py
services/api/app/models/: __init__.py  account.py  analysis_run.py  audit_event.py  dataset.py  detection_event.py  generated_report.py  graph_metrics.py  investigation.py  risk_assessment.py  transaction.py  user.py
services/api/app/reports/: service.py
services/api/app/schemas/: account.py  alert.py  auth.py  case.py  common.py  dashboard.py  dataset.py  graph.py
services/api/app/services/: auth_service.py  case_service.py  dashboard_service.py  dataset_service.py
services/api/tests/: conftest.py  test_auth.py  test_dataset.py  test_detection.py  test_detection_ground_truth.py  test_graph.py  test_graph_api.py  test_upload_path.py
(+67 files in other folders)
